# ConnextDev

./: .gitignore  DDS_AGENT_DEVELOPMENT_FRAMEWORK_PLAN.md
dds-agent-framework/: README.md  pyproject.toml
dds-agent-framework/benchmark/: BENCHMARK_LEVELS.md  Dockerfile  SCENARIO_DEVELOPMENT_LOG.md  TOOLS_FOR_MODELS.md  benchmark_runner.py  config.yaml  dual_agent_runner.py  generate_report.py  models_clean.txt  models_comprehensive.txt  models_final.txt  models_full_eval.txt  models_gpt5_family.txt  models_rti_pitch.txt  models_to_test.txt  pricing.py  requirements.txt  rubric_evaluator.py  run_all_benchmarks.py  test_api_keys.py
dds-agent-framework/benchmark/results/dual_agent/: L1-PY-01_anthropic_claude-opus-4-5__gemini-2.5-flash_2026-01-01T13-41-52.386590.json  L1-PY-01_anthropic_claude-opus-4-5__openai_gpt-4.1-mini_2026-01-01T13-43-19.756680.json  L1-PY-01_anthropic_claude-opus-4-5__openai_gpt-4.1-mini_2026-01-01T14-23-11.242636.json  L1-PY-01_hello_publisher_anthropic_claude-opus-4-20250514__anthropic_claude-opus-4-20250514_2026-01-01T20-08-18.326846.json  L1-PY-01_hello_publisher_anthropic_claude-opus-4-5__anthropic_claude-opus-4-5_2026-01-01T21-18-20.194629.json  L1-PY-01_hello_publisher_anthropic_claude-opus-4-5__anthropic_claude-opus-4-5_2026-01-02T00-09-27.026913.json  L1-PY-01_hello_publisher_anthropic_claude-opus-4-5__anthropic_claude-opus-4-5_2026-01-02T02-06-22.075230.json  L1-PY-01_hello_publisher_anthropic_claude-sonnet-4-20250514__anthropic_claude-sonnet-4-20250514_2026-01-01T20-13-33.250545.json  L1-PY-01_hello_publisher_anthropic_claude-sonnet-4-20250514__anthropic_claude-sonnet-4-20250514_2026-01-01T21-26-09.972780.json  L1-PY-01_hello_publisher_anthropic_claude-sonnet-4-20250514__anthropic_claude-sonnet-4-20250514_2026-01-02T00-25-34.036722.json  L1-PY-01_hello_publisher_anthropic_claude-sonnet-4-20250514__anthropic_claude-sonnet-4-20250514_2026-01-02T02-10-20.319450.json  L1-PY-01_hello_publisher_openai_gpt-5-mini__openai_gpt-5-mini_2026-01-02T08-19-51.163712.json  L1-PY-01_hello_publisher_openai_gpt-5.1__openai_gpt-5.1_2026-01-01T19-59-37.404571.json  L1-PY-01_hello_publisher_openai_gpt-5__openai_gpt-5_2026-01-01T19-53-20.555573.json  (+166 more)
dds-agent-framework/docs/: DDS_DEVELOPMENT_GUIDELINES.md
dds-agent-framework/examples/hello_world/: expected_5_samples.jsonl  expected_output.jsonl  publisher.py  qos_profiles.xml  subscriber.py  test_config.yaml
dds-agent-framework/examples/vehicle_telemetry/: publisher.py  qos_profiles.xml  run_demo.py  subscriber.py  test_config.yaml
dds-agent-framework/prompts/: create_publisher.md  create_subscriber.md
dds-agent-framework/src/dds_tools/: __init__.py
dds-agent-framework/tests/: __init__.py  test_integration.py  test_process_manager.py  test_sample_comparator.py  test_spy_parser.py
(+142 files in other folders)
